<resources>
    <string name="MovieMe">MovieMe</string>
    <string name="Pop">Pop</string>
    <string name="Top">Top</string>
    <string name="SciFi">SciFi</string>

    <string name="app_name">Movies</string>
    <string name="API_key">cf302f54886739895a2c28626d65e40d</string>
    <string name="Youtube_API_Key">AIzaSyC9kRsavQOqCulyPhTY1rLHZ8EJHQnrLsY</string>
    <string name="API_key_append">api_key=</string>
    <string name="pop_desc">popularity.desc</string>

    <string name="Grid">Grid</string>
    <string name="list">List</string>
    <string name="Search_Here">Search Here!</string>
    <string name="View_Key">view_key</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="Favorites">Favorites</string>
    <string name="Top_Rated">Top Rated</string>
    <string name="Most_Popular">Most Popular</string>
    <string name="Action">Action</string>
    <string name="Adventure">Adventure</string>
    <string name="History">History</string>
    <string name="Horror">Horror</string>
    <string name="Comedy">Comedy</string>
    <string name="Drama">Drama</string>
    <string name="Fantasy">Fantasy</string>
    <string name="Mystery">Mystery</string>
    <string name="Romance">Romance</string>
    <string name="Science_Fiction">Science Fiction</string>
    <string name="Thriller">Thriller</string>
    <string name="Western">Western</string>

    <string name="API_Query_TopRated_Desc">https://api.themoviedb.org/3/movie/top_rated?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false</string>
    <string name="API_Query_MostPop">https://api.themoviedb.org/3/trending/movie/day?api_key=cf302f54886739895a2c28626d65e40d</string>
    <string name="API_Query_Genre_Action">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=28&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Adventure">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=12&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_History">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=36&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Horror">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=27&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Comedy">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=35&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Drama">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=18&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Fantasy">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=14&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Mystery">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=9648&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Romance">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=10749&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Science_Fiction">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=878&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Thriller">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=53&amp;vote_average.gte=3</string>
    <string name="API_Query_Genre_Western">https://api.themoviedb.org/3/discover/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=false&amp;page=1&amp;with_genres=37&amp;vote_average.gte=3</string>
    <string name="API_Query_Videos_Start">https://api.themoviedb.org/3/movie/</string>
    <string name="API_Query_Videos_Mid">/videos?api_key=</string>
    <string name="API_Query_Reviews_Mid">/reviews?api_key=</string>
    <string name="API_Query_Videos_End">language=en-US</string>
    <string name="API_Query_Fav_Base">https://api.themoviedb.org/3/movie/</string>
    <string name="API_Search_Query_Base">https://api.themoviedb.org/3/search/movie?api_key=cf302f54886739895a2c28626d65e40d&amp;language=en-US&amp;query=</string>
    <string name="API_Search_Query_End">&amp;vote_average.gte=3</string>

    <string name="API_Search_Part1">https://api.themoviedb.org/3/discover/movie?api_key=</string>
    <string name="API_Search_Part2">&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=false&amp;include_video=true&amp;page=</string>
    <string name="API_Search_Part3">&amp;vote_average.gte=</string>
    <string name="API_Search_Part4">&amp;with_genres=</string>
    <string name="API_Search_Part5">&amp;vote_count.gte=50</string>

    <string name="Movie_Name">MovieName</string>
    <string name="Movie_Img_Url">MovieImgUrl</string>
    <string name="Movie_Synopsis">MovieSnyopsis</string>
    <string name="Movie_Rating">MovieRating</string>
    <string name="Movie_Release_Date">MovieReleaseDate</string>
    <string name="Movie_Backdrop">MovieBackdrop</string>
    <string name="Movie_Genre">MovieGenre</string>
    <string name="Movie_ID_URL">MovieIdURL</string>
    <string name="Movie_ID">MovieID</string>

    <string name="API_Img_URL_185">https://image.tmdb.org/t/p/w185//</string>
    <string name="API_IMG_URL_BASE_342">https://image.tmdb.org/t/p/w342//</string>
    <string name="JSON_Title">title</string>
    <string name="Youtube_Base_URL">https://www.youtube.com/watch?v=</string>
    <string name="Min">min</string>
    <string name="Remove_Fav">Remove Favorite</string>
    <string name="Mark_Fav">Mark as Favorite</string>
    <string name="Is_Fav">IsFavorite</string>
    <string name="Set_Title_Favorite">Favorites</string>
    <string name="No">no</string>
    <string name="Yes">yes</string>
    <string name="ID">ID</string>
    <string name="Is_Fav_Key">FAV</string>
    <string name="Reviews">Reviews</string>
    <string name="Trailers">Trailer</string>
    <string name="Trailer_One">Trailer 1</string>
    <string name="Trailer_Two">Trailer 2</string>
    <string name="User_Score">User Score</string>
    <string name="Overview">Overview</string>
    <string name="Out_of_ten"> /10</string>
    <string name="GoToMovie">GoToMovie</string>
    <string name="AddFavPls">Add a favorite movie first!</string>
    <string name="AddMoreThanTen">Add at least 10 favorites!</string>
    <string name="Something_went_wrong">Something went wrong</string>
    <string name="Error_Try_Again">Error. Please try again</string>
    <string name="tmDB_not_responding">The movie database is not responding.</string>

    <string name="Action_ID">28</string>
    <string name="Adv_ID">12</string>
    <string name="Comedy_ID">35</string>
    <string name="Drama_ID">18</string>
    <string name="Fantasy_ID">14</string>
    <string name="History_ID">36</string>
    <string name="Horror_ID">27</string>
    <string name="Mystery_ID">9648</string>
    <string name="Romance_ID">10749</string>
    <string name="SciFi_ID">878</string>
    <string name="Thriller_ID">53</string>
    <string name="Western_ID">37</string>

    <string name="Search_Hint">Movie Name</string>

    <string name="Return_Ratings">ReturnRatings</string>
    <string name="Widget_MovieID">WidgetMovieID</string>
    <string name="Fav_Button">Favorite Button</string>
    <string name="Sec_Sep">Section Separator</string>
</resources>
